Fix legend to radio spacing with legend margin instead of targeting the radio

--- a/cfgov/unprocessed/apps/paying-for-college/css/college-costs/college-costs.less
+++ b/cfgov/unprocessed/apps/paying-for-college/css/college-costs/college-costs.less
@@ -62,6 +62,9 @@
     legend.h4 {
       margin-top: unit(30px / @base-font-size-px, em);
     }
+    legend.h4 {
+      margin-bottom: unit(4px / @base-font-size-px, em);
+    }
 
     .equation-row {
       .financial-item {
@@ -292,9 +295,5 @@
     & > .financial-item:first-child {
       margin-top: 0;
     }
-  }
-
-  .o-form__fieldset > .m-form-field--radio:nth-child(3) {
-    margin-top: 0;
   }
 }
